modified:   src/com/startjava/lesson_2_3_4/array/ArrayTheme.java